# swift-nio

./: CMakeLists.txt
Sources/: CMakeLists.txt
Sources/CNIOHTTPParser/: CMakeLists.txt
Sources/CNIOWindows/: shim.c
Sources/CNIOWindows/include/: CNIOWindows.h
Sources/NIO/: BSDSocket.swift  BaseSocket.swift  BaseSocketChannel.swift  Bootstrap.swift  CMakeLists.txt  DatagramVectorReadManager.swift  GetaddrinfoResolver.swift  IO.swift  Interfaces.swift  Linux.swift  PendingDatagramWritesManager.swift  PendingWritesManager.swift  PipePair.swift  Selector.swift  Socket.swift  SocketAddresses.swift  SocketChannel.swift  SocketOptionProvider.swift  SocketProtocols.swift  System.swift  SystemDarwin.swift  SystemGlibc.swift  SystemMSVCRT.swift  Thread.swift  Utilities.swift
Sources/NIOConcurrencyHelpers/: CMakeLists.txt  lock.swift
